# vxa

./: CMakeLists.txt  Doxyfile  LICENSE  opencv-import.cpp  opencv-import.h  opencv-import.hpp  run_tests.sh  test1.c  test2.c  vxa-config.cmake  vxa.h
cmake/: FindOpenVX.cmake
test_data/: test1.xml
